argocd/kustomize/empty-api/example-local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: empty-api
  labels:
    app: empty-api
    istio: ingressgateway
spec:
  parentRefs:
  - name: istio-gateway
    namespace: istio-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: empty-api
      port: 8080
